--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@
         <link rel="stylesheet" href="styles/base.css">
         <script src="scripts/getdates.js"></script>
     </head>
+    <body>
+        <h1> this sucks so much!</h1>
+    </body>
